# trading_app

./: .pre-commit-config.yaml  README.md  gitignore  package-lock.json  package.json  pyproject.toml  structure.txt
.github/workflows/: ci.yml
app/: package-lock.json  package.json  tsconfig.json
app/src/: main.tsx
backend/: .pre-commit-config.yaml  app.py  pyproject.toml  server.py
backend/core/: __init__.py  backfill_turnover_rate.py  cli.py  export_universe.py  io.py  prelude.py  reco.py  reco_cli.py  reco_io.py  recommend.py  shi.py  update_data.py
backend/docs/: ALGO_SPEC_trend_v0.3.md  API_CONTRACT.md
backend/legacy/chan/: bi.py  fractals.py  segment.py  zhongshu.py
backend/tests/: test_bi.py  test_fractals.py  test_io.py  test_prelude.py  test_recommend.py  test_segment.py  test_shi.py  test_zhongshu.py
backend/trading_app_core.egg-info/: PKG-INFO  SOURCES.txt
core/: .pre-commit-config.yaml  pyproject.toml
core/trading_app_core.egg-info/: SOURCES.txt  requires.txt
data/: 000001.SZ.csv  600519.SH.csv
frontend/: .env.local  .eslintrc.json  App.tsx  index.html  main.tsx  package-lock.json  package.json  store.ts  symbol.html  tsconfig.json  types.ts  vite.config.mts
frontend/components/: KLineChart.tsx  Overlays.tsx  SymbolPicker.tsx
frontend/pages/: MarketView.tsx
frontend/src/: App.tsx  main.tsx  store.ts  types.ts  ui.css
frontend/src/components/: FilterPanel.tsx  InsightPanel.tsx  KLineChart.tsx  Overlays.tsx  ResultList.tsx  StockCard.tsx  SymbolDetail.tsx  SymbolPicker.tsx
frontend/src/pages/: MarketHome.tsx  MarketView.tsx  Symbol.tsx
frontend/src/utils/: format.ts
logs/: update_failed.txt  update_resume.txt
public/: data_index.json  reco_logic_zh.html
public/data/: 000001.SZ.csv  000002.SZ.csv  000004.SZ.csv  000006.SZ.csv  000007.SZ.csv  000008.SZ.csv  000009.SZ.csv  000010.SZ.csv  000011.SZ.csv  000012.SZ.csv  000014.SZ.csv  000016.SZ.csv  000017.SZ.csv  000019.SZ.csv  000020.SZ.csv  000021.SZ.csv  000025.SZ.csv  000026.SZ.csv  000027.SZ.csv  000028.SZ.csv  000029.SZ.csv  000030.SZ.csv  000031.SZ.csv  000032.SZ.csv  000034.SZ.csv  000035.SZ.csv  000036.SZ.csv  000037.SZ.csv  000039.SZ.csv  000042.SZ.csv  000045.SZ.csv  000048.SZ.csv  000049.SZ.csv  000050.SZ.csv  000055.SZ.csv  000056.SZ.csv  000058.SZ.csv  000059.SZ.csv  000060.SZ.csv  000061.SZ.csv  (+5404 more)
public/data/metadata/: symbols.csv
scripts/: GENERATE_SYMBOLS_AKSHARE.md  dev.mjs  generate_symbols_tushare.py  inspect_liquidity.py  patch_amount_column.py
