[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading_app_core"
version = "0.1.0"
description = "Deterministic Chan-theory analysis engine"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2.2",
  "numpy>=1.26",
  "python-dateutil>=2.9.0",
  "pydantic>=2.8.2",
]
authors = [{name="Elodie", email="eloliuyx@gmail.com"}]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.6.9",
  "black>=24.8.0",
  "pre-commit>=4.0.1",
  "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E","F","I","B","UP","C90"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*"]
